# linux_jit

./: CMakeLists.txt  README.md  main.cpp
src/: executable_memory.hpp  x86_instruction.hpp  x86_instruction_generator.hpp
test/: CMakeLists.txt  e2e.cpp
